# PyWABackupAPI

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  memory.md  pyproject.toml
docs/: TESTING.md
src/pywabackupapi/: __init__.py  api.py  cli.py  errors.py  files.py  models.py  parsers.py  utils.py
tests/: support.py  test_cli.py  test_full_fixture.py  test_json_contract.py  test_public.py
tests/swift_oracle/: Package.swift
tests/swift_oracle/Sources/swift_wa_oracle/: main.swift
