[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "PyWABackupAPI"
version = "0.2.0"
description = "Python port of SwiftWABackupAPI for exploring WhatsApp data in iPhone backups"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Domingo Gallardo" }
]
dependencies = []

[project.scripts]
pywabackupapi = "pywabackupapi.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
